--- a/608/index.html
+++ b/608/index.html
@@ -269,18 +269,18 @@
         </div>
 
         <div class="person-card" onclick="openAlbum('1NO_ER47mXslo5qrMzh1BW9MZ0CeN2SkI')">
-            <img class="avatar" src="https://drive.google.com/thumbnail?id=1OOR5CvwK5MLKrtUzBKRetDr35ViTC0VF&sz=w200" alt="學生03">
-            <div class="info">03 王小美</div>
+            <img class="avatar" src="https://drive.google.com/thumbnail?id=1zqlDhDBH11VK8G6_6MvupeoPBOhaOqQl&sz=w200" alt="學生03">
+            <div class="info">03 林巧婕</div>
         </div>
 
         <div class="person-card" onclick="openAlbum('1ljcfzuHufDKM4PcnhENRbbW86q8WQOhA')">
-            <img class="avatar" src="https://drive.google.com/thumbnail?id=1i2tsdJEqIyQfIX7uT55qYD5fPNydmic1&sz=w200" alt="學生04">
-            <div class="info">04 張偉</div>
+            <img class="avatar" src="https://drive.google.com/thumbnail?id=1ljFS1UKpAfiCOKPukuIQm9lwhhSe-9mo&sz=w200" alt="學生04">
+            <div class="info">04 紀妙璇</div>
         </div>
 
         <div class="person-card" onclick="openAlbum('1Uk-Cytv_qjelZSzg9UajylDj6ZJIpPRc')">
-            <img class="avatar" src="https://drive.google.com/thumbnail?id=1ycNs-shE-51_Ev3N8XuGjf0q_lp6Ab2C&sz=w200" alt="學生05">
-            <div class="info">05 陳美玲</div>
+            <img class="avatar" src="https://drive.google.com/thumbnail?id=1kSQF2EIsWeNp3v6HLxvMeXp_oaedCfys&sz=w200" alt="學生05">
+            <div class="info">07 張硯均</div>
         </div>
 
         <div class="person-card" onclick="openAlbum('1NO_ER47mXslo5qrMzh1BW9MZ0CeN2SkI')">
