--- a/608/index.html
+++ b/608/index.html
@@ -285,38 +285,38 @@
 
         <div class="person-card" onclick="openAlbum('1NO_ER47mXslo5qrMzh1BW9MZ0CeN2SkI')">
             <img class="avatar" src="https://drive.google.com/thumbnail?id=1S1Jz7DQ5-0RGZm4zgfuOlszlBvUUOmo2&sz=w200" alt="學生06">
-            <div class="info">06 黃志強</div>
+            <div class="info">08 張薰云</div>
         </div>
 
         <!-- 第二排 -->
         <div class="person-card" onclick="openAlbum('1ljcfzuHufDKM4PcnhENRbbW86q8WQOhA')">
             <img class="avatar" src="https://drive.google.com/thumbnail?id=1hQ06_bycw5z2lL5LaKyz5vbt3XiuUFTF&sz=w200" alt="學生07">
-            <div class="info">07 林曉華</div>
+            <div class="info">09 陳怡筠</div>
         </div>
 
         <div class="person-card" onclick="openAlbum('1Uk-Cytv_qjelZSzg9UajylDj6ZJIpPRc')">
             <img class="avatar" src="https://drive.google.com/thumbnail?id=1sAT4hig4FOcRvq0H8o7qUsyjfRoFXAXT&sz=w200" alt="學生08">
-            <div class="info">08 趙明</div>
+            <div class="info">10 陳亭希</div>
         </div>
 
         <div class="person-card" onclick="openAlbum('1NO_ER47mXslo5qrMzh1BW9MZ0CeN2SkI')">
             <img class="avatar" src="https://drive.google.com/thumbnail?id=12To6YApOqBDESuFNTCmzGf4RsIDrj7w6&sz=w200" alt="學生09">
-            <div class="info">09 周小安</div>
+            <div class="info">11 陳品甄</div>
         </div>
 
         <div class="person-card" onclick="openAlbum('1ljcfzuHufDKM4PcnhENRbbW86q8WQOhA')">
             <img class="avatar" src="https://drive.google.com/thumbnail?id=14QmXurBKx_T1fajvvLi7fuk65iRCAlGx&sz=w200" alt="學生10">
-            <div class="info">10 高志豪</div>
+            <div class="info">12 陳姿臻</div>
         </div>
 
         <div class="person-card" onclick="openAlbum('1Uk-Cytv_qjelZSzg9UajylDj6ZJIpPRc')">
             <img class="avatar" src="https://drive.google.com/thumbnail?id=1XY1TbeGT891bCHyQZhUoqTWHfD92DD2h&sz=w200" alt="學生11">
-            <div class="info">11 何欣怡</div>
+            <div class="info">13 陳宥蓉</div>
         </div>
 
         <div class="person-card" onclick="openAlbum('1NO_ER47mXslo5qrMzh1BW9MZ0CeN2SkI')">
             <img class="avatar" src="https://drive.google.com/thumbnail?id=1kcKIiKOgEz1zGPTSI_Jv32a5EEK09E59&sz=w200" alt="學生12">
-            <div class="info">12 吳俊傑</div>
+            <div class="info">14 陳湘湄</div>
         </div>
     </div>
 
