--- a/608/index.html
+++ b/608/index.html
@@ -8,7 +8,7 @@
         /* 網頁背景 */
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background: linear-gradient(to bottom, #e6e6fa, #f0f0f5);
             text-align: center;
         }
 
@@ -98,7 +98,7 @@
         .person-card {
             width: 200px;
             height: 250px;
-            background-color: white;
+            background-color: #d9d9d9;
             border-radius: 10px;
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
             text-align: center;
