--- a/608/index.html
+++ b/608/index.html
@@ -8,7 +8,9 @@
         /* 網頁背景 */
         body {
             font-family: Arial, sans-serif;
-            background: linear-gradient(to bottom, #e6e6fa, #f0f0f5);
+            body {
+            background: linear-gradient(to bottom, #1a2a40, #0f1c2e); /* 漸層深藍色 */
+            color: white;
             text-align: center;
         }
 
@@ -98,7 +100,9 @@
         .person-card {
             width: 200px;
             height: 250px;
-            background-color: #d9d9d9;
+            background-color: #3a3a3a; /* 深灰色 */
+            color: white; /* 讓文字變白色 */
+            border: 1px solid #5a5a5a; /* 再加一點細細的外框 */
             border-radius: 10px;
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
             text-align: center;
@@ -108,9 +112,15 @@
             position: relative;
         }
 
-        .person-card:hover {
-            transform: scale(1.05);
+        .person-card {
+            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
         }
+        
+        .person-card:hover {
+            transform: translateY(-5px); /* 懸停時微微上移 */
+            box-shadow: 0px 5px 15px rgba(255, 255, 255, 0.2); /* 淡白色光暈 */
+        }
+
 
         /* 大頭貼（圓形，修改圓心位置） */
         .avatar {
