--- a/608/index.html
+++ b/608/index.html
@@ -9,8 +9,8 @@
         body {
             font-family: Arial, sans-serif;
             body {
-            background: linear-gradient(to bottom, #1a2a40, #0f1c2e); /* 漸層深藍色 */
-            text-align: center;
+            background: linear-gradient(to bottom, #1a2a40, #0f1c2e) !important;
+            color: white;
         }
 
         /* 主要容器（排版根據螢幕大小變動） */
