--- a/608/index.html
+++ b/608/index.html
@@ -9,7 +9,7 @@
         body {
             font-family: Arial, sans-serif;
             body {
-            background: linear-gradient(to bottom, #1a2a40, #0f1c2e) !important;
+            background-color: #0f1c2e !important; /* 強制應用深藍色 */
             color: white;
         }
 
