--- a/608/index.html
+++ b/608/index.html
@@ -8,7 +8,7 @@
         /* 網頁背景 */
         body {
             font-family: Arial, sans-serif;
-            background-color: #1b1b53 !important; /* 強制應用深藍色 */
+            background: linear-gradient(to bottom, #1a2a40, #0f1c2e) !important;
             color: white;
         }
 
