--- a/608/index.html
+++ b/608/index.html
@@ -8,7 +8,7 @@
         /* 網頁背景 */
         body {
             font-family: Arial, sans-serif;
-            background: linear-gradient(to bottom, #151524, #12121c) !important;
+            background-color: #000000 !important; /* 強制應用黑色 */
             color: white;
         }
 
