--- a/608/index.html
+++ b/608/index.html
@@ -8,7 +8,7 @@
         /* 網頁背景 */
         body {
             font-family: Arial, sans-serif;
-            background-color: #000000 !important; /* 強制應用黑色 */
+            background: linear-gradient(to bottom, #080808, #0a0a0a) !important;
             color: white;
         }
 
