--- a/608/index.html
+++ b/608/index.html
@@ -317,7 +317,7 @@
             <div class="info">12 陳姿臻</div>
         </div>
 
-        <div class="person-card" onclick="openAlbum('1k5bE3mEnccVi1QpwzY3ou24hEQdPYXkp)">
+        <div class="person-card" onclick="openAlbum('1k5bE3mEnccVi1QpwzY3ou24hEQdPYXkp')">
             <img class="avatar" src="https://drive.google.com/thumbnail?id=1XY1TbeGT891bCHyQZhUoqTWHfD92DD2h&sz=w200" alt="學生11">
             <div class="info">13 陳宥蓉</div>
         </div>
