--- a/608/index.html
+++ b/608/index.html
@@ -8,7 +8,7 @@
         /* 網頁背景 */
         body {
             font-family: Arial, sans-serif;
-            background-color: #1f1f1f
+            background-color: #1f1f1f;
             color: white;
         }
 
