--- a/608/index.html
+++ b/608/index.html
@@ -12,6 +12,11 @@
             color: white;
         }
 
+        h1 {
+            text-align: center;
+        }
+
+
         /* 主要容器（排版根據螢幕大小變動） */
         .container {
             display: grid;
