--- a/608/index.html
+++ b/608/index.html
@@ -410,6 +410,67 @@
             <img class="avatar" src="https://drive.google.com/thumbnail?id=1kcKIiKOgEz1zGPTSI_Jv32a5EEK09E59&sz=w200" alt="學生12">
             <div class="info">14 陳湘湄</div>
         </div>
+
+        <div class="person-card" onclick="openAlbum('1z6QM41ku9n3fpRhfbU5f0razulsuVYGd')">
+            <img class="avatar" src="https://drive.google.com/thumbnail?id=1yXdxy9NkwSGWWvZ2nte1zrTL8ZG7k5iB&sz=w200" alt="學生01">
+            <div class="info">01 呂俞潔</div>
+        </div>
+
+        <div class="person-card" onclick="openAlbum('1lT4TJVQi5I8-27qHxO998Tj1yDG7TVD3')">
+            <img class="avatar" src="https://drive.google.com/thumbnail?id=1a3MZYR5cnrZsPktsLdiv8n1A10fD96fT&sz=w200" alt="學生02">
+            <div class="info">02 李其宣</div>
+        </div>
+
+        <div class="person-card" onclick="openAlbum('1iaKV6Yh-O6IpFXUo25hgSqDAXR7TDj1o')">
+            <img class="avatar" src="https://drive.google.com/thumbnail?id=1zqlDhDBH11VK8G6_6MvupeoPBOhaOqQl&sz=w200" alt="學生03">
+            <div class="info">03 林巧婕</div>
+        </div>
+
+        <div class="person-card" onclick="openAlbum('1SPM35uSbLmZdndyg4th-D1FpJA--C7oQ')">
+            <img class="avatar" src="https://drive.google.com/thumbnail?id=1ljFS1UKpAfiCOKPukuIQm9lwhhSe-9mo&sz=w200" alt="學生04">
+            <div class="info">04 紀妙璇</div>
+        </div>
+
+        <div class="person-card" onclick="openAlbum('1CVOmYHqVcTpczcsgvgDbepvglxdemtF-')">
+            <img class="avatar" src="https://drive.google.com/thumbnail?id=1kSQF2EIsWeNp3v6HLxvMeXp_oaedCfys&sz=w200" alt="學生05">
+            <div class="info">07 張硯均</div>
+        </div>
+
+        <div class="person-card" onclick="openAlbum('1V8nd1V29e6vpaFPaYxd4tz88CiW6y7f_')">
+            <img class="avatar" src="https://drive.google.com/thumbnail?id=1S1Jz7DQ5-0RGZm4zgfuOlszlBvUUOmo2&sz=w200" alt="學生06">
+            <div class="info">08 張薰云</div>
+        </div>
+
+        <!-- 第二排 -->
+        <div class="person-card" onclick="openAlbum('1-muanCMbVYQPERn6boReFWw3bzsZVEhX')">
+            <img class="avatar" src="https://drive.google.com/thumbnail?id=1hQ06_bycw5z2lL5LaKyz5vbt3XiuUFTF&sz=w200" alt="學生07">
+            <div class="info">09 陳怡筠</div>
+        </div>
+
+        <div class="person-card" onclick="openAlbum('17sDIogKH-1OVuKIVQDKSoTsy6KMGsm4O')">
+            <img class="avatar" src="https://drive.google.com/thumbnail?id=1sAT4hig4FOcRvq0H8o7qUsyjfRoFXAXT&sz=w200" alt="學生08">
+            <div class="info">10 陳亭希</div>
+        </div>
+
+        <div class="person-card" onclick="openAlbum('1E06G4Z1FPOF66G97cnw97ivMkX0pg8xO')">
+            <img class="avatar" src="https://drive.google.com/thumbnail?id=12To6YApOqBDESuFNTCmzGf4RsIDrj7w6&sz=w200" alt="學生09">
+            <div class="info">11 陳品甄</div>
+        </div>
+
+        <div class="person-card" onclick="openAlbum('1YXJH3zbUZigvYNieSFO6_XM4iVKOxgit')">
+            <img class="avatar" src="https://drive.google.com/thumbnail?id=14QmXurBKx_T1fajvvLi7fuk65iRCAlGx&sz=w200" alt="學生10">
+            <div class="info">12 陳姿臻</div>
+        </div>
+
+        <div class="person-card" onclick="openAlbum('1k5bE3mEnccVi1QpwzY3ou24hEQdPYXkp')">
+            <img class="avatar" src="https://drive.google.com/thumbnail?id=1XY1TbeGT891bCHyQZhUoqTWHfD92DD2h&sz=w200" alt="學生11">
+            <div class="info">13 陳宥蓉</div>
+        </div>
+
+        <div class="person-card" onclick="openAlbum('11Z2BlE99cfGtFTVR-9STnoTKc4tffQSl')">
+            <img class="avatar" src="https://drive.google.com/thumbnail?id=1kcKIiKOgEz1zGPTSI_Jv32a5EEK09E59&sz=w200" alt="學生12">
+            <div class="info">14 陳湘湄</div>
+        </div>
     </div>
 
     <!-- 照片牆 -->
