--- a/608/index.html
+++ b/608/index.html
@@ -10,8 +10,9 @@
             font-family: Arial, sans-serif;
             background-color: #1f1f1f;
             color: white;
+            padding-top: 60px; /* 確保工具列不會擋住內容 */
         }
-        
+        /*最上面空據欄*/
         #toolbar {
             position: fixed;
             top: 0;
