--- a/608/index.html
+++ b/608/index.html
@@ -263,6 +263,11 @@
         .close-button:hover {
             background-color: rgba(255, 0, 0, 0.7);
         }
+
+        .back-button, .close-button {
+            z-index: 1001; /* 提高層級，確保不被工具列擋住 */
+        }
+
     </style>
 </head>
 <body>
