--- a/608/index.html
+++ b/608/index.html
@@ -27,7 +27,7 @@
             font-size: 30px; 
             font-weight: bold;
             transition: all 0.3s ease-in-out;
-            z-index: 1000; /* 確保在最上層 */
+            /*z-index: 1000; /* 確保在最上層 */
         }
 
 
@@ -509,7 +509,7 @@
             } else {
                 toolbar.style.height = "80px";  // 恢復原大小
                 toolbar.style.backgroundColor = "#333";  // 恢復深灰色
-                toolbar.style.fontSize = "24px"; // 字體恢復
+                toolbar.style.fontSize = "30px"; // 字體恢復
             }
         });
 
