--- a/608/index.html
+++ b/608/index.html
@@ -125,7 +125,7 @@
             border-radius: 10px;
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
             text-align: center;
-            /*padding-top: 20px;*/
+            padding-top: 20px;
             cursor: pointer;
             transition: transform 0.2s;
             position: relative;
