--- a/608/index.html
+++ b/608/index.html
@@ -27,7 +27,7 @@
             font-size: 25px; 
             font-weight: bold;
             transition: all 0.3s ease-in-out;
-            /*z-index: 1000; /* 確保在最上層 */
+            z-index: 1000; /* 確保在最上層 */
         }
 
 
