--- a/608/index.html
+++ b/608/index.html
@@ -232,6 +232,7 @@
             border-radius: 50%;
             cursor: pointer;
             transition: transform 0.2s;
+            z-index: 1001;
         }
 
         .back-button:hover {
@@ -257,6 +258,7 @@
             border-radius: 50%;
             cursor: pointer;
             transition: transform 0.2s;
+            z-index: 1001;
         }
 
 
