--- a/608/index.html
+++ b/608/index.html
@@ -447,7 +447,7 @@
         </div>
 
         <!-- 第六排 -->
-        <div class="person-card" onclick="openAlbum('1uZxdUYyK6H41QyQeemP78IW2r6-tPmXU')
+        <div class="person-card" onclick="openAlbum('1uZxdUYyK6H41QyQeemP78IW2r6-tPmXU')">
             <img class="avatar" src="https://drive.google.com/thumbnail?id=1BDDJLi1BsYa7lczWe5iGvZFQ7bcgUMjy&sz=w200" alt="學生33">
             <div class="info">33 廖研皓</div>
         </div>
