--- a/608/index.html
+++ b/608/index.html
@@ -314,7 +314,7 @@
 
         <div class="person-card" onclick="openAlbum('1CVOmYHqVcTpczcsgvgDbepvglxdemtF-')">
             <img class="avatar" src="https://drive.google.com/thumbnail?id=1kSQF2EIsWeNp3v6HLxvMeXp_oaedCfys&sz=w200" alt="學生07">
-            <div class="info">07 張硯均</div>
+            <div class="info">07 張硯鈞</div>
         </div>
 
         <div class="person-card" onclick="openAlbum('1V8nd1V29e6vpaFPaYxd4tz88CiW6y7f_')">
