--- a/608/index.html
+++ b/608/index.html
@@ -286,7 +286,7 @@
 <body>
 
     <header id="toolbar">
-        <h1 style="margin-right: auto;">畢業紀念冊</h1>
+        <h1>畢業紀念冊</h1>
         <div id="uploadButton" onclick="openUploadFolder()" title="上傳照片">
             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" viewBox="0 0 24 24">
                 <path d="M19 15v4H5v-4H3v4a2 2 0 002 2h14a2 2 0 002-2v-4z"/>
