--- a/608/index.html
+++ b/608/index.html
@@ -19,16 +19,15 @@
             left: 0;
             width: 100%;
             height: 80px;
-            background-color: #333; /* 深灰色 */
+            background-color: #333;
             color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 25px; 
+            font-size: 25px;
             font-weight: bold;
-            transition: all 0.3s ease-in-out;
-            z-index: 1000; /* 確保在最上層 */
+            z-index: 1000;
+            text-align: center;
+            line-height: 80px; /* 讓文字垂直置中 */
         }
+
 
 
         #uploadButton {
@@ -293,6 +292,7 @@
                 <path d="M11 15h2V9h3l-4-5-4 5h3z"/>
             </svg>
         </div>
+
     </header>
 
     
