--- a/608/index.html
+++ b/608/index.html
@@ -29,19 +29,23 @@
         }
 
 
-
+        
         #uploadButton {
-            margin-right: 20px;
+            position: absolute;
+            right: 20px;
+            top: 50%;
+            transform: translateY(-50%);
             cursor: pointer;
             padding: 10px;
             border-radius: 50%;
             transition: background-color 0.2s, transform 0.2s;
-            }
+        }
         
         #uploadButton:hover {
-                background-color: rgba(255, 255, 255, 0.2);
-                transform: scale(1.1);
-            }
+            background-color: rgba(255, 255, 255, 0.2);
+            transform: scale(1.1);
+        }
+
 
 
 
