--- a/608/index.html
+++ b/608/index.html
@@ -298,7 +298,7 @@
     </header>
 
     <!-- 上傳圖案按鈕 -->
-    <div id="uploadButton" class="upload-button hidden" onclick="openUploadFolder()">
+    <div id="uploadButton" class="upload-button" onclick="openUploadFolder()">
         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="white">
             <path d="M5 17h14v2H5v-2zm7-12l-5 5h3v4h4v-4h3l-5-5z"/>
         </svg>
