--- a/608/index.html
+++ b/608/index.html
@@ -530,7 +530,7 @@
         
         function openUploadFolder() {
             // 這裡填入你希望跳轉的 Google 雲端資料夾分享連結
-            window.open("https://drive.google.com/drive/folders/你的資料夾ID", "_blank");
+            window.open("https://drive.google.com/drive/folders/1kiZCl4iy-ebA84tf5oGaIuvuvQWHUkz5", "_blank");
         }
 
         
